# core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: sketch-core Build.yml
commands/: commands.c  commands.h
commands/include/: commands.h
constants/include/: codes.h
data structures/: queue.c
errors/: error_codes.h
extra/: codes.h  directory_queue.c  directory_queue.h  functions.c  functions.h  logger.c  logger.h  queue.c  queue.h
extra/include/: codes.h  functions.h  logger.h  queue.h
general_functions/: functions.c
general_functions/include/: functions.h
include/: commands.h  session.h  session_edit.h  session_utils.h
logger/: logger.c
mem/include/: mem.h
sessions/: session.c  session_edit.c
sessions/include/: session.h  session_edit.h
src/: args_parser.c  args_parser.h  commands.c  main.c  session_utils.c
tools/: argument_parser.c  config_parser.c  executor.c  file_handler.c  session_parser.c
tools/include/: argument_parser.h  config_parser.h  executor.h  file_handler.h  session_parser.h
tools/include/execute/: executor.h
tools/include/files/: file_handler.h
tools/include/parser/: config_parser.h  session_parser.h
